@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tryton>
+    <data>
+
+        <record model="ir.sequence.type" id="sequence_type_test">
+            <field name="name">Test</field>
+            <field name="code">test</field>
+            <field name="groups" eval="[('add', ref('res.group_admin'))]"/>
+        </record>
+
+    </data>
+</tryton>
