@@ -184,6 +184,8 @@ def all_suite():
     suite_.addTests(test_trigger.suite())
     import trytond.tests.test_protocols_datatype as test_protocols_datatype
     suite_.addTests(test_protocols_datatype.suite())
+    import trytond.tests.test_sequence as test_sequence
+    suite_.addTests(test_sequence.suite())
     return suite_
 
 def modules_suite():
